<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
       <LinearLayout
           android:id="@+id/register_linear_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="50dp">
           <EditText
               android:id="@+id/register_phone_number"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:inputType="phone"
               android:hint="@string/phone_number"/>
           <Button
               android:id="@+id/register_send_button"
               android:layout_width="60dp"
               android:layout_height="wrap_content"
               android:text="@string/send"/>
       </LinearLayout>
    <android.support.design.widget.TextInputLayout
       android:id="@+id/register_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_linear_layout"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/register_authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication"/>
    </android.support.design.widget.TextInputLayout>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/register_input_layout"
        android:hint="@string/password_hint"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/register_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/register_password"
        android:hint="@string/input_again"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/register_commit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/register_password_again"
        android:layout_margin="30dp"
        android:text="@string/commit_register"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/register_skip_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/skip_to_login"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:gravity="right"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>