<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:layout_margin="10dp"
           android:text="@string/account"/>
       <TextView
           android:id="@+id/user_phone_number"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           tools:text="13283611365"
           android:textSize="20sp"
           android:textColor="@color/black"
           android:layout_margin="10dp"/>
   </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <android.support.design.widget.TextInputLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:layout_margin="10dp">
           <EditText
               android:id="@+id/user_address"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/address"/>
       </android.support.design.widget.TextInputLayout>
       <Button
           android:id="@+id/user_change_address"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/change"/>
   </LinearLayout>
    <TextView
        android:id="@+id/user_my_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="@string/my_order" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/user_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_order_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>