<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_menu_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="@dimen/toolbar_height">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/edit_menu_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/edit_menu_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/food_detail_image_height"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/edit_menu_toolbar"
        android:scaleType="fitCenter"
        android:src="@drawable/no_image_available"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/edit_menu_image"
        android:text="@string/edit_tap_to_change_image"
        android:gravity="center"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_menu_price_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/edit_menu_name_input_layout">
        <EditText
            android:id="@+id/edit_menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_price"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_menu_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/text">
        <EditText
            android:id="@+id/edit_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"/>
    </android.support.design.widget.TextInputLayout>
    <EditText
        android:id="@+id/edit_menu_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/edit_menu_price_input_layout"
        android:hint="@string/edit_description"
        android:gravity="start"/>


</RelativeLayout>
</ScrollView>